// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VImg should display error slot 1`] = `
<div class="v-responsive v-img">
  <div class="v-responsive__sizer">
  </div>
  <transition-stub>
    <img class="v-img__img v-img__img--contain"
         style="display: none;"
    >
  </transition-stub>
  <transition-stub>
  </transition-stub>
  <transition-stub>
    <div class="v-img__error">
      <div>
        Error loading image
      </div>
    </div>
  </transition-stub>
  <div class="v-responsive__content">
  </div>
</div>
`;

exports[`VImg should display placeholders 1`] = `
<div class="v-responsive v-img">
  <div class="v-responsive__sizer">
  </div>
  <transition-stub>
    <img class="v-img__img v-img__img--contain"
         style="display: none;"
    >
  </transition-stub>
  <transition-stub>
    <img class="v-img__img v-img__img--preload v-img__img--contain"
         alt
    >
  </transition-stub>
  <transition-stub>
    <div class="v-img__placeholder">
      <div>
        loading...
      </div>
    </div>
  </transition-stub>
  <div class="v-responsive__content">
  </div>
</div>
`;

exports[`VImg should display placeholders 2`] = `
<div class="v-responsive v-img">
  <div class="v-responsive__sizer"
       style="padding-bottom: 56.25%;"
  >
  </div>
  <transition-stub>
    <img class="v-img__img v-img__img--contain">
  </transition-stub>
  <transition-stub>
  </transition-stub>
  <transition-stub>
  </transition-stub>
  <div class="v-responsive__content">
  </div>
</div>
`;

exports[`VImg should have aria attributes 1`] = `
<div class="v-responsive v-img"
     aria-label="this is not a decorative image"
     role="img"
>
  <div class="v-responsive__sizer"
       style="padding-bottom: 56.25%;"
  >
  </div>
  <transition-stub>
    <img class="v-img__img v-img__img--contain">
  </transition-stub>
  <transition-stub>
  </transition-stub>
  <div class="v-responsive__content">
  </div>
</div>
`;

exports[`VImg should load 1`] = `
<div class="v-responsive v-img">
  <div class="v-responsive__sizer">
  </div>
  <transition-stub>
    <img class="v-img__img v-img__img--contain"
         style="display: none;"
    >
  </transition-stub>
  <transition-stub>
  </transition-stub>
  <div class="v-responsive__content">
  </div>
</div>
`;

exports[`VImg should load 2`] = `
<div class="v-responsive v-img">
  <div class="v-responsive__sizer"
       style="padding-bottom: 56.25%;"
  >
  </div>
  <transition-stub>
    <img class="v-img__img v-img__img--contain">
  </transition-stub>
  <transition-stub>
  </transition-stub>
  <div class="v-responsive__content">
  </div>
</div>
`;

exports[`VImg should override vuetify-loader values 1`] = `
<div class="v-responsive v-img">
  <div class="v-responsive__sizer"
       style="padding-bottom: 50%;"
  >
  </div>
  <transition-stub>
    <img class="v-img__img v-img__img--contain"
         style="display: none;"
    >
  </transition-stub>
  <transition-stub>
    <img class="v-img__img v-img__img--preload v-img__img--contain"
         alt
    >
  </transition-stub>
  <div class="v-responsive__content">
  </div>
</div>
`;

exports[`VImg should render a <picture> 1`] = `
<div class="v-responsive v-img">
  <div class="v-responsive__sizer"
       style="padding-bottom: 56.25%;"
  >
  </div>
  <transition-stub>
    <picture class="v-img__picture">
      <source srcset="LOAD_SUCCESS_SRC.webp">
      <img class="v-img__img v-img__img--contain">
    </picture>
  </transition-stub>
  <transition-stub>
  </transition-stub>
  <div class="v-responsive__content">
  </div>
</div>
`;

exports[`VImg should update src 1`] = `
<div class="v-responsive v-img">
  <div class="v-responsive__sizer"
       style="padding-bottom: 56.25%;"
  >
  </div>
  <transition-stub>
    <img class="v-img__img v-img__img--contain">
  </transition-stub>
  <transition-stub>
  </transition-stub>
  <div class="v-responsive__content">
  </div>
</div>
`;

exports[`VImg should update src 2`] = `
<div class="v-responsive v-img">
  <div class="v-responsive__sizer"
       style="padding-bottom: 56.25%;"
  >
  </div>
  <transition-stub>
    <img class="v-img__img v-img__img--contain">
  </transition-stub>
  <transition-stub>
  </transition-stub>
  <div class="v-responsive__content">
  </div>
</div>
`;

exports[`VImg should update src while still loading 1`] = `
<div class="v-responsive v-img">
  <div class="v-responsive__sizer">
  </div>
  <transition-stub>
    <img class="v-img__img v-img__img--contain"
         style="display: none;"
    >
  </transition-stub>
  <transition-stub>
  </transition-stub>
  <div class="v-responsive__content">
  </div>
</div>
`;

exports[`VImg should update src while still loading 2`] = `
<div class="v-responsive v-img">
  <div class="v-responsive__sizer"
       style="padding-bottom: 56.25%;"
  >
  </div>
  <transition-stub>
    <img class="v-img__img v-img__img--contain">
  </transition-stub>
  <transition-stub>
  </transition-stub>
  <div class="v-responsive__content">
  </div>
</div>
`;

exports[`VImg should use vuetify-loader data 1`] = `
<div class="v-responsive v-img">
  <div class="v-responsive__sizer"
       style="padding-bottom: 100%;"
  >
  </div>
  <transition-stub>
    <img class="v-img__img v-img__img--contain"
         style="display: none;"
    >
  </transition-stub>
  <transition-stub>
    <img class="v-img__img v-img__img--preload v-img__img--contain"
         alt
    >
  </transition-stub>
  <div class="v-responsive__content">
  </div>
</div>
`;
